2004-10-31  Tor Lillqvist  <tml@iki.fi>

	* glib/gwin32.c: Document g_win32_get_windows_version().

	* glib/gstdio.[ch]: Add g_lstat().

2004-10-29  Matthias Clasen  <mclasen@redhat.com>

	* glib/goption.c: Doc additions.

	* glib/goption.c (parse_arg): Convert filenames to UTF-8 on
	Windows.

2004-10-29  Hans Breuer  <hans@breuer.org>

	* glibconfig.h */makefile.msc.in : updated [and finally fixed my
	script to produce ready to go de-in(ed) files, w/o autotools]

	* */*.rc.in : updated copyrights to 2004

	* glib/gutils.c : some CSIDL_* defines lacking from older SDK;
	use the same fallback mecahnism as on *NIX where ever applicable

2004-10-29  Matthias Clasen  <mclasen@redhat.com>

	* tests/option-test.c: Add tests for the handling of
	non-option arguments, "--" and G_OPTION_REMAINING.

	* glib/goption.[hc]: #define G_OPTION_REMAINING, which is
	a special long option name, which can be used for an option
	in the main group which collects the non-option arguments.
	It must be of type G_OPTION_ARG_STRING_ARRAY or 
	G_OPTION_ARG_FILENAME_ARRAY. If the main group doesn't contain
	an option whose name is G_OPTION_REMAINING, the non-option
	arguments are left behind in argv as before.

	* glib/goption.c: Add documentation.

2004-10-28  Matthias Clasen  <mclasen@redhat.com>

	* glib/gmessages.h: Mark g_assert_warning as G_GNUC_NORETURN,
	to avoid compiler warnings.  (#156767, Owen Taylor)

2004-10-29  Tor Lillqvist  <tml@iki.fi>

	* glib/gstdio.c: Include also <direct.h> for mkdir() prototype
	with MSVC. [156727, Kazuki IWAMOTO]

	* glib/giochannel.h (g_io_channel_new_file): Redefine also
	g_io_channel_new_file to the UTF-8 version on Win32. [156725,
	Kazuki IWAMOTO)

2004-10-28  Ray Strode  <rstrode@redhat.com>

	* glib/gkeyfile.c
	(find_file_in_data_dirs): clean up a leak (#156652,
	Morten Welinder)
	(g_key_file_load_from_fd): propagate fstat() error
	conditions and retry read on EAGAIN (#156647, Morten
	Welinder).  Return error if file is NOT regular, not if