@@ -1,3 +1,8 @@
+2004-10-31  Matthias Clasen  <mclasen@redhat.com>
+
+	* glib/gwin32.c: Add bits of markup to g_win32_get_windows_version()
+	docs.
+
 2004-10-31  Tor Lillqvist  <tml@iki.fi>
 
 	* glib/gwin32.c: Document g_win32_get_windows_version().
