@@ -97,6 +97,17 @@ variables like <envar>LANG</envar>, <envar>PATH</envar> or <envar>HOME</envar>.
   </para>
 </formalpara> 
 
+<formalpara>
+  <title><envar>G_WIN32_PRETEND_WIN9X</envar></title>
+
+  <para>
+    Setting this variable to any value forces g_win32_get_windows_version()
+    to return a version code for Windows 9x. This is mainly an internal 
+    debugging aid for GTK+ and GLib developers, to be able to check the 
+    code paths for Windows 9x.
+  </para>
+</formalpara> 
+
 </refsect2>
 
 <refsect2>
