@@ -99,22 +99,28 @@ On non-Windows platforms, expands to nothing.
    will be stored. If this is used, you must also include 
    <filename>windows.h</filename>. If you need a more complex DLL entry 
    point function, you cannot use this.
-<!-- # Unused Parameters # -->
-@static: 
-@dll_name: 
 
 
 <!-- ##### MACRO G_WIN32_HAVE_WIDECHAR_API ##### -->
 <para>
-
+On Windows, this macro defines an expression which evaluates to %TRUE
+if functions like _wopen(), _wrename(), etc., are available.
+</para>
+<para>
+On non-Windows platforms, it is not defined.
 </para>
 
-
+@Since: 2.6
 
 <!-- ##### MACRO G_WIN32_IS_NT_BASED ##### -->
 <para>
-
+On Windows, this macro defines an expression which evaluates to %TRUE 
+if the code is running on an NT-based Windows operating system.
+</para>
+<para>
+On non-Windows platforms, it is not defined.
 </para>
 
+@Since: 2.6
 
 
